# pyrite-cli

./: .gitignore  .pre-commit-config.yaml  .pyrite_config.json  AGENTS.md  CHANGELOG_project.md  Makefile  README.MD  README.zh-CN.md  TODO.md  output.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
cli/: __init__.py  main.py  plugin_manager.py
cli/device/: __init__.py
cli/device/tunnel_scripts/: __init__.py  kb.py  network.py
cli/plugins/: __init__.py  manager.py
cli/plugins/sandbox/: __init__.py  config.py  guard.py  hook.py  scanner.py
cli/project/: dev.py  feature_stub.pyi  project.py  scaffold.py  stubs.py  sync.py
cli/reg_commands/: __init__.py  board.py  common.py  debug.py  device.py  device_test.py  fs.py  manifest.py  pkg.py  project.py  snapshot.py  trace.py  tunnel.py
cli/utils/: Flash.py  ansi.py  board_alias.py  board_features.py  board_profile.py  compiler.py  config.py  device_context.py  device_tests.py  errors.py  firmware.py  flash.py  log.py  logger.py  manifest_loader.py  monitor.py  output.py  pipes.py  pkg.py  precheck.py  preprocessor.py  project_files.py  selector.py  serial_transport.py  snapshot.py  trace.py  traceback_map.py  transport.py  types.py  webdav_mount.py  webrepl_micropython.py  webrepl_transport.py
cli/utils/config/: __init__.py  types.py
cli/utils/diagnostics/: __init__.py  doctor.py  monitor.py
cli/utils/flash/: __init__.py  core.py  facade.py  flash.py
cli/utils/log/: __init__.py
cli/utils/mp_scripts/: flash.py  flash_delta.py  flash_program.py
cli/utils/transport/: __init__.py  base.py  serial.py  (+2 more)
docs/: WebDAV挂载.md  architecture.md  conditional-compilation-guide.md  device-flashing-and-project-sync.md  idea.md  micropython-firmware-feature-probes.md  mp_firm_featswitch.md  plugins_EN.md  quick-start.md  v0.0.3-plan.md  v0.0.5 update-preview.md  webdav-mount.md  关于Flash.py.md  关于Flash.py_EN.md  关于flash.py.md  关于flash.py_EN.md  关于project.md  关于project_EN.md  关于架构与模块.md  快速上手.md  插件开发指南.md  条件编译与宏预处理.md  条件编译与宏预处理_EN.md  条件编译实战.md  条件编译实战指南.md  设备刷入与项目同步.md
scripts/: gen_requirements.py
test/: device_test_output.py  device_test_wifi.py  manifest.py  test_board_features.py  test_board_profile.py  test_config.py  test_connection_settings.py  test_device_context.py  test_device_runner.py  test_doctor.py  test_flash_utils.py  test_logger.py  test_manifest_loader.py  test_manifest_lock.py  test_monitor.py  test_output.py  test_pkg.py  test_port_unlock.py  test_precheck.py  test_preprocessor.py  test_project_cli.py  test_project_dev.py  test_project_stubs.py  test_protocol_helpers.py  test_serial_transport.py  test_snapshot.py  test_trace.py  test_traceback_map.py  test_transport_serial.py  test_tunnel.py  test_webdav_mount.py
tests/: test_plugin_manager.py
tests/test_plugins/: __init__.py  test_sandbox_config.py  test_sandbox_e2e.py  test_sandbox_guard.py  test_sandbox_hook.py  test_sandbox_scanner.py
utils/: Flash.py
(+9 files in other folders)
