[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pyrite-cli"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "typer>=0.9.0",
    "pyserial>=3.5",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "mpy-cross",
    "mpremote>=1.28.0",
    "libcst>=1.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "websocket-client>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0",
]

[project.scripts]
pyrcli = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli", "cli.*", "utils", "utils.*", "project", "project.*"]

[tool.setuptools.package-data]
"cli.project" = ["feature_stub.pyi"]
"cli.utils.flash" = ["mp_scripts/*.py"]

[tool.pytest.ini_options]
testpaths = [
    "test/test_protocol_helpers.py",
    "test/test_flash_utils.py",
    "test/test_config.py",
    "test/test_logger.py",
    "test/test_manifest_loader.py",
    "test/test_preprocessor.py",
    "test/test_serial_transport.py",
    "test/test_output.py",
    "test/test_webdav_mount.py",
    "test/test_pkg.py",
    "test/test_monitor.py",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
